--- a/28020-h/28020-h.htm
+++ b/28020-h/28020-h.htm
@@ -5561,7 +5561,7 @@ in a fix pretty soon. But what's all dis here talkin' 'bout?</p>
 
 <p>"Dat man ober dar say dat womin needs to be helped into
 carriages, and lifted ober ditches, and to hab de best place
-everywhar. Nobody eber helps me into carriage, or ober
+everywhar. Nobody eber helps me into carriages, or ober
 mud-puddles, or gibs me any best place!" And raising herself to
 her full height, and her voice to a pitch like rolling thunder,
 she asked. "And a'n't I a woman? Look at me! Look at my arm! (and
